--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.html filter=lfs diff=lfs merge=lfs -text
+*.DS_Store filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.css filter=lfs diff=lfs merge=lfs -text
