--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 *.mp3 filter=lfs diff=lfs merge=lfs -text
 *.mov filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.js filter=lfs diff=lfs merge=lfs -text
