--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 *.mov filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.js filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
