--- a/.gitattributes
+++ b/.gitattributes
@@ -77,3 +77,5 @@
 /NodeServer/node_modules/utils-merge/LICENSE filter=lfs diff=lfs merge=lfs -text
 /NodeServer/node_modules/vary/LICENSE filter=lfs diff=lfs merge=lfs -text
 *.webp filter=lfs diff=lfs merge=lfs -text
+*.java filter=lfs diff=lfs merge=lfs -text
+*.LICENSE filter=lfs diff=lfs merge=lfs -text
