--- a/.gitattributes
+++ b/.gitattributes
@@ -79,3 +79,4 @@
 *.webp filter=lfs diff=lfs merge=lfs -text
 *.java filter=lfs diff=lfs merge=lfs -text
 *.LICENSE filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
