--- a/.gitattributes
+++ b/.gitattributes
@@ -80,3 +80,4 @@
 *.java filter=lfs diff=lfs merge=lfs -text
 *.LICENSE filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
+*.jpeg filter=lfs diff=lfs merge=lfs -text
