--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+*.psd filter=lfs diff=lfs merge=lfs -text
 *.html filter=lfs diff=lfs merge=lfs -text
 *.DS_Store filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
